<resources>
    <string name="app_name">GateKeeper</string>
    <string name="randomNew">随机生成</string>
    <string name="restore">还原</string>


    <string name="manufacturer">制造商 : MANUFACTURER OPOP</string>
    <string name="brand">品牌 :  BRAND OPPO</string>
    <string name="model">型号 :  MODEL OPPO R9</string>
    <string name="product">产品名 :  PRODUCT R9</string>
    <string name="device">设备名 : DEVICE R9</string>
    <string name="user">设备用户名 :  USER 149835734</string>
    <string name="release">系统版本 :  RELEASE 5.1</string>
    <string name="sdk">系统版本值 :  SDK 23 </string>
    <!--<string name="board">主板 :  </string>-->
    <!--<string name="cpu">系统架构 :  </string>-->
    <!--<string name="id">设备版本号 :  </string>-->
    <!--<string name="display">显示屏参数 :  </string>-->
    <!--<string name="hardware">硬件名称 :  </string>-->
    <string name="android_id">Android_ID :  getString 108fe4412h62</string>
    <string name="serial">串口序列号 :  SERIAL 42fdgf5</string>
    <string name="imei">序列号 : getDeviceId 44867835665756</string>
    <string name="line1_number">手机号码 :  getLine1Number 13800138000</string>
    <string name="simserial_number">手机卡序列号 :  getSimSerialNumber 324235436565467546</string>
    <string name="imsi">IMSI :  getSubscriberId 123457647</string>
    <string name="sim_country">手机卡国家 :  getSimCountryIso cn</string>
    <string name="sim_operator">运营商 :  getSimOperator 46002</string>
    <string name="sim_operator_name">运营商名称 :  getSimOperatorName 中国移动</string>
    <string name="network_country">国家ISO代码 :  getNetWorkCountryIso cn</string>
    <string name="network_operator">网络运营商类型 : getNetWorkOperator  46000</string>
    <string name="network_operator_name">网络类型名 : getNetWorkOperatorName  中国移动</string>
    <string name="mac_address">MAC地址 :  getMacAddress 07:2f:24:5h:6r:7e</string>
    <string name="ssid">无线路由器 :  getSSID ae0089dhf</string>
    <string name="bssid">无线路由器地址 :  getBSSID 07:2f:24:5h:6r:7e</string>


    <string name="gl_renderer">GPU :  GL_RENDERER</string>
    <string name="gl_vendor">GPU厂商 :  GL_VENDOR</string>
    <string name="ip_address">内网IP(wifi可用) : getIpAddress 192.168.1.134 </string>

    <string name="density">屏幕密度 :  density 3.0</string>
    <string name="density_dpi">屏幕DPI :  densityDpi 480</string>




</resources>
