<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/manufacturer" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/manufacturer" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/brand" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/brand" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/model" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/model" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/device" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/device" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/product" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/product" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/release" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/release" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/user" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/user" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/sdk" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/sdk" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t13" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t14" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t15" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t16" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t17" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t18" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t19" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t20" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t21" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t22" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t23" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t24" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10.0dip" android:weightSum="1.0">
        <TextView android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="QQQQQQQ" android:singleLine="true" android:layout_weight="0.6" />
        <TextView android:id="@+id/t25" android:layout_width="match_parent" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:layout_weight="0.4" />
    </LinearLayout>
</LinearLayout>